force-app/main/default/objects/Content__c/Content__c.object-meta.xml
<CustomObject>
    <description>Object for Content Management</description>
    <label>Content</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>