force-app/main/default/objects/Content__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Long Text Area to hold content that will be included in the message</description>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>