force-app/main/default/objects/Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Tracks the type of Content/message being delivered</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Salesforce Tips &amp; Tricks</fullName>
                <default>true</default>
                <label>Salesforce Tips &amp; Tricks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>