force-app/main/default/objects/Content__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>Date/Time the content will be or was posted/delivered</description>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>