force-app/main/default/objects/Content__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <description>Displays the day of the week from Date/Time field</description>
    <formula>CASE(
  MOD( DATEVALUE(Date_Time__c) - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>