force-app/main/default/objects/Content__c/fields/Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Intended_Audience__c</fullName>
    <description>Identifies the primary audience group (internal versus external)</description>
    <label>Intended Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Everyone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>