force-app/main/default/objects/Content__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Text area to hold internal notes related to the content</description>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>