force-app/main/default/objects/Content__c/fields/Primary_Object_Item__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_Item__c</fullName>
    <description>Identifies the Primary Object/Item the message is associated with</description>
    <label>Primary Object/Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Item</valueSetName>
    </valueSet>
</CustomField>