force-app/main/default/objects/Content__c/fields/Related_Content__c.field-meta.xml
<CustomField>
    <fullName>Related_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties the record to a related content record</description>
    <label>Related Content</label>
    <referenceTo>Content__c</referenceTo>
    <relationshipLabel>Related Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>