force-app/main/default/objects/Content__c/fields/Related_Issue_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties content to a use case</description>
    <label>Related Issue/Request</label>
    <referenceTo>IssueRequest__c</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>