force-app/main/default/objects/Content__c/fields/Web_Page_Reference__c.field-meta.xml
<CustomField>
    <fullName>Web_Page_Reference__c</fullName>
    <description>URL field to hold web page reference (e.g. Link to Chatter post)</description>
    <inlineHelpText>Link to Chatter Post, if applicable</inlineHelpText>
    <label>Web Page Reference</label>
    <type>Url</type>
</CustomField>