force-app/main/default/objects/Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Intended_Audience__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Primary_Object_Item__c</columns>
    <columns>Content__c</columns>
    <columns>Media_Type__c</columns>
    <columns>Related_Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>